@@ -19,6 +19,7 @@
         "modding",
         "operativity",
         "popover",
+        "shortcuts",
         "sider",
         "spec",
         "stylelint",
