@@ -1,0 +1,11 @@
+.key-input {
+  max-width: 5rem;
+}
+.dynamic-delete-button {
+  cursor: pointer;
+  font-size: 24px;
+  margin-left: 0.4rem;
+  position: relative;
+  top: 4px;
+  // transition: all 0.3s;
+}
