@@ -7,4 +7,9 @@
       <app-ui></app-ui>
     </ng-template>
   </nz-tab>
+  <nz-tab nzTitle="HotKeys">
+    <ng-template nz-tab>
+      <app-hot-keys></app-hot-keys>
+    </ng-template>
+  </nz-tab>
 </nz-tabset>
